--- a/frontend/src/components/Loader.css
+++ b/frontend/src/components/Loader.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(255, 255, 255, 0.9); /* White overlay */
+    background: rgba(255, 255, 255); /* White overlay */
     display: flex;
     justify-content: center;
     align-items: center;
